# pytest-artifacts

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yml
docs/: conf.py  index.md
src/pytest_artifacts/: plugin.py
tests/: test_fixtures.py  test_plugin_sanity.py  test_pytest_artifacts.py
